--- a/style.css
+++ b/style.css
@@ -292,6 +292,8 @@ body {
   box-sizing: border-box;
   display: inline-block;
   vertical-align: middle;
+  text-align: center;
+  margin: 30px auto;
 }
 
 /* Animation styles */
