--- a/src/components/HomePage/homepage.css
+++ b/src/components/HomePage/homepage.css
@@ -105,3 +105,34 @@
   overflow: hidden;
   display: block;
 }
+
+@media only screen and (max-width: 600px) {
+  .how-it-works {
+    display: block;
+  }
+
+  .footer_content {
+    display: block;
+  }
+
+  .homepage__brief {
+    font-size: 1.8rem;
+  }
+
+  .homepage__title {
+    font-size: 6rem;
+  }
+
+  .btn-login,
+  .btn-register {
+    padding: 11px 30px !important;
+  }
+
+  .homepage__tag {
+    font-size: 2rem;
+  }
+
+  .how-it-works-title {
+    font-size: 3rem;
+  }
+}
