--- a/src/components/createIncident/createRecord.css
+++ b/src/components/createIncident/createRecord.css
@@ -104,3 +104,9 @@
   width: 100%;
   height: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  .position-center {
+    display: block;
+  }
+}
